// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.<level> log methods accept an event name and optional context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
      },
    },
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "bye",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.<level> log methods one for each log level 1`] = `
Array [
  Object {
    "event": "hi",
    "level": 6,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "hi",
    "level": 5,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "hi",
    "level": 4,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "hi",
    "level": 2,
    "pid": 0,
    "time": 0,
  },
  Object {
    "event": "hi",
    "level": 1,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.addToContext can be called multiple times, merging deeply 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
        "name": "Jill",
      },
    },
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.addToContext gets deeply merged with local context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
        "name": "Jill",
      },
    },
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.addToContext local context takes prescedence over pinned context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 2,
      },
    },
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.addToContext pins context for all subsequent logs from the logger 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
      },
    },
    "event": "hi",
    "level": 3,
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.child creates a sub logger 1`] = `
Array [
  Object {
    "event": "hi",
    "level": 3,
    "path": Array [
      "tim",
    ],
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.child inherits level from parent 1`] = `
Array [
  Object {
    "event": "hi",
    "level": 1,
    "path": Array [
      "tim",
    ],
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.child is unable to change context of siblings 1`] = `
Array [
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b1",
    },
    "event": "foo",
    "level": 3,
    "path": Array [
      "b1",
    ],
    "pid": 0,
    "time": 0,
  },
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b2",
    },
    "event": "foo",
    "level": 3,
    "path": Array [
      "b2",
    ],
    "pid": 0,
    "time": 0,
  },
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b3",
    },
    "event": "foo",
    "level": 3,
    "path": Array [
      "b3",
    ],
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`.child reacts to level changes in root logger 1`] = `
Array [
  Object {
    "event": "foo",
    "level": 1,
    "path": Array [
      "b",
    ],
    "pid": 0,
    "time": 0,
  },
]
`;

exports[`output defaults to stdout for all levels 1`] = `
Array [
  Object {
    "event": "foo",
    "level": 6,
    "pid": 0,
    "time": 0,
  },
]
`;
